Bug 885345 - HwcComposer2D doesn't render Camera or Video frames. r=nrc, a=leo+

Correct the SurfaceDescriptor validation inside GetRenderState() to pass gralloc
buffer to composer module