gfx/layers/opengl/CanvasLayerOGL.cpp
@@ -478,7 +478,7 @@ ShadowCanvasLayerOGL::GetLayer()
 LayerRenderState
 ShadowCanvasLayerOGL::GetRenderState()
 {
-  if (mDestroyed || !IsValidSharedTexDescriptor(mFrontBufferDescriptor)) {
+  if (mDestroyed || !IsSurfaceDescriptorValid(mFrontBufferDescriptor)) {
     return LayerRenderState();
   }
   return LayerRenderState(&mFrontBufferDescriptor,
